--- a/Paris-Olympic-data-transformation.ipynb
+++ b/Paris-Olympic-data-transformation.ipynb
@@ -17,6 +17,8 @@
    },
    "outputs": [],
    "source": [
+    "#connect to azure data lake storage Gen2 using OAUTH authentication\n",
+    "\n",
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
     "\"fs.azure.account.oauth2.client.id\": \"client_ID\",\n",
@@ -30,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#mounnt the ADLS container to databricks file system\n",
+    "\n",
     "dbutils.fs.mount(\n",
     "source = \"abfss://parisolympicdata@parisolympicsds.dfs.core.windows.net\", \n",
     "mount_point = \"/mnt/parisOlympics\",\n",
@@ -141,6 +145,8 @@
     }
    ],
    "source": [
+    "#show all the contents of the mounted directory\n",
+    "\n",
     "display(dbutils.fs.ls(\"/mnt/parisOlympics\"))"
    ]
   },
@@ -215,65 +221,14 @@
    },
    "outputs": [],
    "source": [
+    "#load the csv files from the raw-data directory into a spark dataframe\n",
+    "\n",
     "Athletes = spark.read.option(\"header\", \"true\").option(\"inferSchema\", \"true\").csv(\"/mnt/parisOlympics/raw-data/athletes.csv\")\n",
     "Coaches = spark.read.option(\"header\", \"true\").option(\"inferSchema\", \"true\").csv(\"/mnt/parisOlympics/raw-data/coaches.csv\")\n",
     "Country = spark.read.option(\"header\", \"true\").option(\"inferSchema\", \"true\").csv(\"/mnt/parisOlympics/raw-data/Country.csv\")\n",
     "Medalist = spark.read.option(\"header\", \"true\").option(\"inferSchema\", \"true\").csv(\"/mnt/parisOlympics/raw-data/medalist.csv\")\n",
     "Medals = spark.read.option(\"header\", \"true\").option(\"inferSchema\", \"true\").csv(\"/mnt/parisOlympics/raw-data/medals.csv\")\n",
     "MedalTotal = spark.read.option(\"header\", \"true\").option(\"inferSchema\", \"true\").csv(\"/mnt/parisOlympics/raw-data/MedalTotal.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "3a796961-9e2e-49f6-b265-38125c68b8d3",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------+-------------+--------------------+----------+------------+------------+-----+\n",
-      "|country_code|      country|        country_long|Gold Medal|Silver Medal|Bronze Medal|Total|\n",
-      "+------------+-------------+--------------------+----------+------------+------------+-----+\n",
-      "|         USA|United States|United States of ...|        40|          44|          42|  126|\n",
-      "|         CHN|        China|People's Republic...|        40|          27|          24|   91|\n",
-      "|         JPN|        Japan|               Japan|        20|          12|          13|   45|\n",
-      "|         AUS|    Australia|           Australia|        18|          19|          16|   53|\n",
-      "|         FRA|       France|              France|        16|          26|          22|   64|\n",
-      "|         NED|  Netherlands|         Netherlands|        15|           7|          12|   34|\n",
-      "|         GBR|Great Britain|       Great Britain|        14|          22|          29|   65|\n",
-      "|         KOR|        Korea|   Republic of Korea|        13|           9|          10|   32|\n",
-      "|         ITA|        Italy|               Italy|        12|          13|          15|   40|\n",
-      "|         GER|      Germany|             Germany|        12|          13|           8|   33|\n",
-      "|         NZL|  New Zealand|         New Zealand|        10|           7|           3|   20|\n",
-      "|         CAN|       Canada|              Canada|         9|           7|          11|   27|\n",
-      "|         UZB|   Uzbekistan|          Uzbekistan|         8|           2|           3|   13|\n",
-      "|         HUN|      Hungary|             Hungary|         6|           7|           6|   19|\n",
-      "|         ESP|        Spain|               Spain|         5|           4|           9|   18|\n",
-      "|         SWE|       Sweden|              Sweden|         4|           4|           3|   11|\n",
-      "|         KEN|        Kenya|               Kenya|         4|           2|           5|   11|\n",
-      "|         NOR|       Norway|              Norway|         4|           1|           3|    8|\n",
-      "|         IRL|      Ireland|             Ireland|         4|           0|           3|    7|\n",
-      "|         BRA|       Brazil|              Brazil|         3|           7|          10|   20|\n",
-      "+------------+-------------+--------------------+----------+------------+------------+-----+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "MedalTotal.show()"
    ]
   },
   {
@@ -293,30 +248,12 @@
    },
    "outputs": [],
    "source": [
+    "#apply the necessary transformations on the datasets\n",
+    "\n",
     "Athletes = Athletes.drop('current')\n",
     "Coaches = Coaches.drop('current', 'category', 'country', 'country_long')\n",
     "Medalist = Medalist.drop('medal_date', 'medal_code', 'url_event', 'is_medallist')\n",
     "Medals = Medals.drop('url_event', 'country', 'country_long')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "9e8f0aea-6cde-4257-b752-fd1ff44a8219",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Athletes.write.mode(\"overwrite\").option(\"header\", \"true\").csv(\"/mnt/parisOlympics/transformed-data/athletes\")\n"
    ]
   },
   {
@@ -336,6 +273,9 @@
    },
    "outputs": [],
    "source": [
+    "#store the transformed data into new csv files\n",
+    "\n",
+    "Athletes.write.mode(\"overwrite\").option(\"header\", \"true\").csv(\"/mnt/parisOlympics/transformed-data/athletes\")\n",
     "Coaches.write.mode(\"overwrite\").option(\"header\", \"true\").csv(\"/mnt/parisOlympics/transformed-data/coaches\")\n",
     "Country.write.mode(\"overwrite\").option(\"header\", \"true\").csv(\"/mnt/parisOlympics/transformed-data/country\")\n",
     "Medalist.write.mode(\"overwrite\").option(\"header\", \"true\").csv(\"/mnt/parisOlympics/transformed-data/medalist\")\n",
